--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,14 +28,17 @@ jobs:
         run: |
           python preprocessing/automate_Muhammad-Syarif-Hidayat.py
 
-      - name: Authenticate with GitHub
+      - name: Configure Git
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
       - name: Commit and push processed data
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git add preprocessing/personality_dataset_preprocessing.csv
-          git commit -m "Update processed dataset by GitHub Actions" || echo "No changes to commit"
-          git push
+          git add preprocessing/personality_dataset_preprocessing.csv || echo "Nothing to add"
+          git diff --cached --quiet && echo "No changes to commit" || (
+            git commit -m "Update processed dataset by GitHub Actions"
+            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:main
+          )
